# dbgen

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  Dockerfile  LICENSE  MANIFEST.in  README.md  mkdocs.yml  old  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  test  yamllint-config.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/hooks/: pre-commit
.github/workflows/: docker-publish.yml  dockerimage.yaml  publish.yml  publish_docs.yml  release.yml  test.dockerimage.yaml  test.yml
dbgen/: __init__.py  __main__.py  version.py
dbgen/CLI/: main.py  new.py
dbgen/CLI/newfiles/: analysis.py  default.py  ginit  ginit.py  io  io.py  log  main  main.py  parse.py  schema  schema.py  utils.py
dbgen/cli/: main.py  new.py
dbgen/cli/newfiles/: analysis.py  data.csv  default.py  dev  ginit.py  io.py  main.py  parse.py  schema.py  utils.py
dbgen/cli_new/: main.py
dbgen/cli_new/newfiles/: default.py  schema.py
dbgen/core/: action.py  action2.py  datatypes.py  expr.py  fromclause.py  func.py  funclike.py  gen.py  load.py  misc.py  pathconstraint.py  query.py  schema.py  schemaclass.py  sqltypes.py
dbgen/core/airflow_plugin/: RunOperator.py  __init__.py  dummy_genoperator.py  genoperator.py
dbgen/core/expr/: expr.py  exprstrat.py  pathattr.py  sqltypes.py
dbgen/core/model/: airflow.template.py  metatable.py  model.py  run.py  run_airflow.py  run_gen.py
dbgen/example/: constants.py  main.py  model.py  schema.py
dbgen/example/data/: procedures.csv  ssn.json
dbgen/example/generators/: analysis.py  io.py
dbgen/example/scripts/: parsers.py
dbgen/templates/: __init__.py  generator.py.jinja  insert.sql.jinja  pyblock.py.jinja  run_airflow.py.jinja  update.sql.jinja
dbgen/test/: __main__.py  main.py  rating.db  test_action.py  test_base.py  test_connect_info.py  test_func.py  test_funcs.py  test_generators.py  test_misc.py  test_objects.py  test_pyblock.py  test_serialization.py  test_type_checking.py  todo.txt
dbgen/utils/: config.py  default_logging.yaml  exceptions.py  graphs.py  interact.py  lists.py  log.py  misc.py  module_loading.py  numeric.py  parsing.py  settings.py  sql.py  str_utils.py
docker/: docker-compose-LocalExecutor.yml
docker/airflow/: docker-compose.yaml
docker/dbgen/: Dockerfile  Dockerfile-dev  Dockerfile.airflow  Dockerfile.pip  Dockerfile.pip-basic  Dockerfile.poetry  docker-compose-basictest.yml
docker/dbgen-airflow/: Dockerfile  build.sh  docker-compose-LocalExecutor.yml
docker/dbgen-docker/: Dockerfile  build.sh  build_2.sh  docker-compose-LocalExecutor.yml  test.py
docker/grafana/: docker-compose.yaml
docker/tests/: full-model-compose.yml
docs/: brian.md  common_errors.md  database_basics.md  getting_started.md  index.md  installation.md  license.md  overview_and_concepts.md  tutorial.md  tutorial_old.md  usage.md
docs/css/: custom.css  extra.css  termynal.css
docs/dbgen/: index.html
docs/js/: custom.js  termynal.js
docs/pages/: common_errors.md  configuration.md  database_basics.md  getting_started.md  installation.md  license.md  overview_and_concepts.md  running_and_debugging.md  technical_documentation.md
docs/source/: conf.py  dbgen.core.expr.rst  dbgen.core.model.rst  dbgen.core.rst  dbgen.example.generators.rst  dbgen.example.rst  dbgen.example.scripts.rst  dbgen.rst  dbgen.templates.rst  dbgen.utils.rst  index.rst  introduction.rst  modules.rst  usage.rst
docs/templates/: text.mako
docs/tutorial/: 01_directory_structure.md  02_defining_schema.md  03_csv_to_db.md  04_handling_data_custom_formats.md  05_refining_data.md  directory_structure.md  etl.md  io_etl_step_complex.md  io_etl_step_simple.md  io_gen_complex.md  io_gen_simple.md  schema.md
docs_src/hello_world/: hello_world.py
docs_src/installation/: git_installation.sh
docs_src/tutorial/: 001.py  003.py  004.py  005.py  006.py  008.py  010.py  tutorial000.py  tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py  tutorial009.py  tutorial010.py
docs_src/tutorial_old/: 010.py  tutorial003.py  tutorial004.py  tutorial005.py  tutorial006.py  tutorial007.py  tutorial008.py
docs_src/usage/: tutorial000.py  tutorial001.py  tutorial002.py  tutorial003.py
examples/alice_bob_lab/: cookiecutter.json
examples/simple/: cookiecutter.json
license-templates/: LICENSE.rst  LICENSE.txt
scripts/: build.sh  build_pip.sh  docs_serve.py  export_requirements.sh  publish_docs.sh  publish_pip.sh
scripts/ci/: autoflake.sh  lint.sh  test.sh
scripts/in_container/: entrypoint_prod.sh
src/dbgen/: __init__.py  __main__.py  _enum.py  configuration.py  exceptions.py  git_version  types.py  version.py
tests/: conftest.py  example_functions.py  performance.py  test_action.py  test_base.py  test_basic.py  test_cli.py  test_common_extractors.py  test_comp_node.py  test_connect_info.py  test_connection.py  test_const.py  test_context_manager.py  test_entity.py  test_env.py  test_etl_step.py  test_extract.py  test_full_model.py  test_func.py  test_function_parsing.py  test_gen.py  test_load.py  test_load_validation.py  test_log.py  test_metadata.py  test_misc.py  test_model.py  test_model_settings.py  test_model_tags.py  test_named_paths.py  test_pyblock.py  test_python_extract.py  test_query.py  test_run_config.py  test_scratch.py  test_select.py  test_serialization.py  test_sqlmodel.py  test_transform_injection.py  test_transform_map.py  (+2 more)
tests/example/: database.py  entities.py  full_model.py  json_model.py  map_model.py  model.py  model_with_custom_extract.py  new_api_model.py  pyblock_examples.py  simple_model.py  simple_transform.py  skip_downstream.py  test.csv  test_copy_from.py  tutorial.py
tests/performance/: test_validation.py
tests/providers/: test_aws.py  test_common_extractors.py
tests/strategies/: __init__.py  config.py  entity.py  test_hypothesis.py
tests/test_airflow/: test_airflow_conn.py  test_broken_airflow.py  test_imports.py
tests/test_cli/: test_main.py
tests/test_entities/: test_partitions.py
(+392 files in other folders)
